syntax = "proto3";

option java_package = "com.example.internal.commonmodels";
option java_multiple_files = true;

message PassOwner {
  string first_name = 1;
  string last_name = 2;
  string phone_number = 3;
  string email = 4;
}
